--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,80 @@
-Django==4.2.7
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
-psycopg2-binary==2.9.7
-langgraph==0.0.40
-langchain==0.0.347
-langchain-openai==0.0.2
-sentence-transformers==2.2.2
-openai==1.3.0
-python-dotenv==1.0.0
+annotated-types==0.7.0
+anyio==4.11.0
+asgiref==3.10.0
+cachetools==6.2.0
+certifi==2025.10.5
+charset-normalizer==3.4.3
+colorama==0.4.6
+distro==1.9.0
+Django==5.2.7
+djangorestframework==3.16.1
+faiss-cpu==1.12.0
+filelock==3.19.1
+filetype==1.2.0
+fsspec==2025.9.0
+google-ai-generativelanguage==0.7.0
+google-api-core==2.25.2
+google-auth==2.41.1
+googleapis-common-protos==1.70.0
+greenlet==3.2.4
+grpcio==1.75.1
+grpcio-status==1.75.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.35.3
+idna==3.10
+Jinja2==3.1.6
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-core==0.3.78
+langchain-google-genai==2.1.12
+langchain-text-splitters==0.3.11
+langgraph==0.6.8
+langgraph-checkpoint==2.1.2
+langgraph-prebuilt==0.6.4
+langgraph-sdk==0.2.9
+langsmith==0.4.33
+MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.5
+numpy==2.3.3
+orjson==3.11.3
+ormsgpack==1.10.0
+packaging==25.0
+pillow==11.3.0
+proto-plus==1.26.1
+protobuf==6.32.1
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.0
+pydantic_core==2.41.1
+PyYAML==6.0.3
+regex==2025.9.18
+requests==2.32.5
+requests-toolbelt==1.0.0
+rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+sentence-transformers==5.1.1
+setuptools==80.9.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+sqlparse==0.5.3
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.57.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+xxhash==3.6.0
+zstandard==0.25.0
