Refactor: Update gitignore, env files, and register admin models

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 GOOGLE_API_KEY=AIzaSyDyf6_A1Zd57VPoRlW2BRjlETpczbfX_co
+DEBUG=True
+SECRET_KEY=your-secret-key-here
+DATABASE_URL=postgres://postgres:password@localhost:5432/qtec_chatbot
+ALLOWED_HOSTS=127.0.0.1,localhost
