Fix: Resolved psycopg2-binary installation issue by updating requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ typing_extensions==4.15.0
 urllib3==2.5.0
 xxhash==3.6.0
 zstandard==0.25.0
-psycopg2-binary==2.9.9
+psycopg2-binary
 
 dj-database-url
 
